Fix to supplier spacing issue

--- a/client/analysisui/gridtargetcontrol.css
+++ b/client/analysisui/gridtargetcontrol.css
@@ -1,6 +1,7 @@
 
 .silky-target-list-header {
     margin-bottom: 2px;
+    margin-top: 5px;
 }
 
 .silky-layout-container:not(.silky-control-body) > .first-row > .silky-target-list-header {
